--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,31 @@
 @font-face{
-    font-family:'Prompt-Regular';
-    src:url('../src/fonts/Prompt-Regular.ttf');
-  }
+  font-family:'Prompt-Regular';
+  src:url('../src/fonts/Prompt-Regular.ttf');
+}
   
-  @font-face{
-    font-family:'Prompt-Medium';
-    src:url('../src/fonts/Prompt-Medium.ttf');
-  }
+@font-face{
+  font-family:'Prompt-Medium';
+  src:url('../src/fonts/Prompt-Medium.ttf');
+}
   
-  @font-face{
-    font-family:'Prompt-Bold';
-    src:url('../src/fonts/Prompt-Regular.ttf');
-  }
+@font-face{
+  font-family:'Prompt-Bold';
+  src:url('../src/fonts/Prompt-Regular.ttf');
+}
   
-  h1,h2,h3,h4,h5,h6 {
-    font-family: 'Prompt-Medium';
-  }
-  .title{
-    font-family: 'Prompt-Regular';
-  }
+body {
+  background-color: #fff;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Prompt-Medium';
+}
+
+.title{
+  font-family: 'Prompt-Regular';
+  font-size: large;
+}
+
+.headerbgc {
+  background-color: #009966;
+}
